syntax = "proto3";

package bot.twitch.settings.v1;

message TwitchSettings {
  bool enabled = 1;
}

// GetTwitchSettings
message GetTwitchSettingsRequest {
  string guild_id = 1;
}

message GetTwitchSettingsResponse {
  TwitchSettings settings = 1;
}

// UpdateTwitchSettings
message UpdateTwitchSettingsRequest {
  string guild_id = 1;
  bool enabled = 2;
}
  
message UpdateTwitchSettingsResponse {
  TwitchSettings settings = 1;
}

// TwitchSettingsService
service TwitchSettingsService {
  rpc GetTwitchSettings (GetTwitchSettingsRequest) returns (GetTwitchSettingsResponse);
  rpc UpdateTwitchSettings (UpdateTwitchSettingsRequest) returns (UpdateTwitchSettingsResponse);
}
